# gdcv-exercises

cogra/: CMakeLists.txt
cogra/exercises/BasicImageProcessing/: CMakeLists.txt  Filter.cpp  Filter.h  GeometricTransforms.cpp  GeometricTransforms.h  Image.cpp  Image.h  PointTransformations.cpp  PointTransformations.h  SimpleGeometricTransforms.cpp  SimpleGeometricTransforms.h  Stencil1D.h  Stencil2D.h  main.cpp
cogra/exercises/LinearAlgebra/: LUDecomposition.h  Matrix.h  main.cpp
cogra/libcogra/: CMakeLists.txt
cogra/libcogra/libcogra/: CMakeLists.txt
cogra/libcogra/libcogra/impl/gl/: GLSLProgram.cpp  Screenshot.cpp
cogra/libcogra/libcogra/impl/graphics/drawable/: MeshDrawable.cpp  PolyLineDrawable.cpp  VertexAttributeTypeInfo.cpp
cogra/libcogra/libcogra/impl/ui/: BlinnPhongWidget.cpp  GLFWApp.cpp
cogra/libcogra/libcogra/interface/cogra/: types.h
cogra/libcogra/libcogra/interface/cogra/gl/: GLSLProgram.h  OpenGLRuntimeError.h
cogra/libcogra/libcogra/interface/cogra/graphics/drawable/: MeshDrawable.h  PolyLineDrawable.h  VertexAttributeTypeInfo.h
cogra/libcogra/libcogra/interface/cogra/ui/: GLFWApp.h
cograbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CograExercises.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  spdlog.pc  spdlogConfigVersion.cmake
cograbuild/exercises/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cograbuild/libcogra/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cograbuild/libcogra/libcogra/: cogra.sln  (+7 more)
(+217 files in other folders)
